--- a/com/index.html
+++ b/com/index.html
@@ -11,8 +11,8 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="📈주2회익절 종목공개">
   <meta property="og:description" content="🔥 시장 흐름 · 실시간 대응 · 수익 인증까지 한 번에">
-  <meta property="og:image" content="google-tsdv.github.io
-/photo_2025-10-20_23-19-40.jpeg">
+  <meta property="og:image" content="https://google-cmwc.github.io/photo_2025-10-20_23-19-40.jpeg">
+
   <meta property="og:url" content="https://t.me/+uX5XXTX37PVlNDU1">
 
   <!-- 모바일 최적화 -->
@@ -91,10 +91,11 @@
     </p>
 
     <img
-      src="google-tsdv.github.io
-/photo_2025-10-20_23-19-40.jpeg"
-      alt="주식 이미지"
-      class="thumb"
+  src="https://google-cmwc.github.io/photo_2025-10-20_23-19-40.jpeg"
+  alt="대표 이미지"
+  style="max-width:100%; border-radius:10px;"
+>
+
     >
 
     <p>
